fixed alignment on themes page

--- a/public/less/admin/appearance/themes.less
+++ b/public/less/admin/appearance/themes.less
@@ -55,6 +55,12 @@
 		}
 	}
 
+	[data-type="local"] {
+		.mdl-card__supporting-text {
+			height: 150px;
+		}
+	}
+
 	textarea[data-field] {
 		min-height: 450px;
 		width: 100%;
